<?xml version="1.0" encoding="utf-8"?>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".RegistrationFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/reg_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_welcome_salute" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp"
                android:text="@string/reg_message" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/firstname_txtLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/firstName"
                app:endIconMode="clear_text"
                app:helperText="@string/required"
                app:helperTextTextColor="@color/red"
                app:startIconDrawable="@drawable/ic_baseline_person_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lastname_txtLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lastName" />
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:id="@+id/dob_txtLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/dob"
                app:startIconDrawable="@drawable/ic_baseline_today_24">
                <AutoCompleteTextView
                    android:inputType="none"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:id="@+id/gender_txtLayout"
                android:hint="@string/gender"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <AutoCompleteTextView
                    android:id="@+id/genderTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="none"
                    android:text="" />

            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:id="@+id/quali_txtLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <AutoCompleteTextView
                    android:id="@+id/qualificationTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/qualification"
                    android:text="" />
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mob_num_txtLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/mobile_number"
                app:helperText="@string/required"
                app:startIconDrawable="@drawable/ic_baseline_phone_iphone_24"
                app:endIconMode="clear_text"
                app:prefixText="+91"
                app:errorEnabled="true"
                app:errorIconDrawable="@drawable/ic_baseline_error_outline_24"
                app:helperTextTextColor="@color/red">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mob_num_txtView"
                    android:inputType="phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/postalcode_txtLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:errorEnabled="true"
                app:counterEnabled="true"
                app:counterMaxLength="6"
                app:errorIconDrawable="@drawable/ic_baseline_error_outline_24"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ic_baseline_local_post_office_24"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/postal_code">

                <com.google.android.material.textfield.TextInputEditText
                    android:text="@string/default_postal_code"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/addressLn1_txtLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/address1">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/locality_txtLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/locality">

                <com.google.android.material.textfield.TextInputEditText
                    android:text="@string/default_locality"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/district_txtLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/district">

                <com.google.android.material.textfield.TextInputEditText
                    android:text="@string/default_district"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="48dp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:text="@string/cancel"
                    android:id="@+id/reg_cancelBtn"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <Space
                    android:layout_width="24dp"
                    android:layout_height="10dp"/>

                <Button
                    android:text="@string/submit"
                    android:id="@+id/reg_submitBtn"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </androidx.appcompat.widget.LinearLayoutCompat>


            <Space
                android:layout_width="match_parent"
                android:layout_height="48dp" />
        </LinearLayout>
    </ScrollView>