<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".LoginFragment">

    <ImageView
        android:id="@+id/log_top_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/log_app_name_full"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name_full"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_top_image" />

    <TextView
        android:id="@+id/log_loc_short"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/itet_loc_short"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_app_name_full" />

    <TextView
        android:id="@+id/welcom_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_welcome_salute"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_loc_short"
        android:layout_marginTop="16dp"
        />

    <TextView
        android:id="@+id/log_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/login_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcom_title" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/login_google_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/common_signin_button_text_long"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_summary"
        android:layout_marginTop="24dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>